fix movie night table alignment, text size

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -521,7 +521,6 @@ p {
   overflow-x: auto;
 
   & > table {
-    margin: 1rem;
     padding: 1.5rem;
     border-collapse: collapse;
 
